<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_webSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_webSite"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/button_webSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        android:text="@string/button_webSite" />

    <EditText
        android:id="@+id/editText_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_location"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/button_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        android:text="@string/button_location" />

    <EditText
        android:id="@+id/editText_sharingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_sharingText"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/button_sharingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="shareText"
        android:text="@string/button_sharingText" />

</LinearLayout>